--- a/food.html
+++ b/food.html
@@ -57,7 +57,7 @@
         <label><input type="checkbox" name="food" value="sushi" /> sushi</label>
       </div>
     </div>
-    <button class="button" onclick="location.href='dessert.html'">
+    <button class="button" onclick="location.href='activities.html'">
       Continue UWU
     </button>
   </body>
