--- a/activities.html
+++ b/activities.html
@@ -10,6 +10,16 @@
     <div id="activityquestion"><b>What are we doing after?</b></div>
     <div class="activities-selection">
       <div class="activity-item">
+        <img src="activities/each_other.jpg" alt="Each Other" />
+        <label
+          ><input
+            type="checkbox"
+            name="activities"
+            value="Each Other"
+          />Each Other</label
+        >
+      </div>
+      <div class="activity-item">
         <img src="activities/aquarium.jpeg" alt="aquarium" />
         <label
           ><input
@@ -27,16 +37,6 @@
             name="activities"
             value="arcade"
           />arcade</label
-        >
-      </div>
-      <div class="activity-item">
-        <img src="activities/cinema.jpeg" alt="cinema" />
-        <label
-          ><input
-            type="checkbox"
-            name="activities"
-            value="cinema"
-          />cinema</label
         >
       </div>
       <div class="activity-item">
