--- a/activities.html
+++ b/activities.html
@@ -40,33 +40,33 @@
         >
       </div>
       <div class="activity-item">
-        <img src="activities/keramika.jpeg" alt="ceramics" />
+        <img src="activities/spa_date.jpg" alt="Spa Date" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="ceramics"
-          />ceramics</label
+            value="Spa Date"
+          />Spa Date</label
         >
       </div>
       <div class="activity-item">
-        <img src="activities/kunsthalle.jpeg" alt="kunsthalle" />
+        <img src="activities/movie_date.jpg" alt="Movie Date" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="kunsthalle"
-          />exhibition</label
+            value="Movie Date"
+          />Movie Date</label
         >
       </div>
       <div class="activity-item">
-        <img src="activities/park.jpeg" alt="park.jpeg" />
+        <img src="activities/Painting-with-a-Twist.png" alt="Painting With A Twist" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="park.jpeg"
-          />park</label
+            value="Painting With A Twist"
+          />Painting With A Twist</label
         >
       </div>
     </div>
