--- a/activities.html
+++ b/activities.html
@@ -20,26 +20,6 @@
         >
       </div>
       <div class="activity-item">
-        <img src="activities/aquarium.jpeg" alt="aquarium" />
-        <label
-          ><input
-            type="checkbox"
-            name="activities"
-            value="aquarium"
-          />aquarium</label
-        >
-      </div>
-      <div class="activity-item">
-        <img src="activities/arcade.jpeg" alt="arcade" />
-        <label
-          ><input
-            type="checkbox"
-            name="activities"
-            value="arcade"
-          />arcade</label
-        >
-      </div>
-      <div class="activity-item">
         <img src="activities/spa_date.jpg" alt="Spa Date" />
         <label
           ><input
@@ -47,16 +27,6 @@
             name="activities"
             value="Spa Date"
           />Spa Date</label
-        >
-      </div>
-      <div class="activity-item">
-        <img src="activities/movie_date.jpg" alt="Movie Date" />
-        <label
-          ><input
-            type="checkbox"
-            name="activities"
-            value="Movie Date"
-          />Movie Date</label
         >
       </div>
       <div class="activity-item">
@@ -70,6 +40,26 @@
         >
       </div>
     </div>
+    <div class="activity-item">
+        <img src="activities/movie_date.jpg" alt="Movie Date" />
+        <label
+          ><input
+            type="checkbox"
+            name="activities"
+            value="Movie Date"
+          />Movie Date</label
+        >
+      </div>
+    <div class="activity-item">
+        <img src="activities/arcade.jpeg" alt="Bowling/Arcade" />
+        <label
+          ><input
+            type="checkbox"
+            name="activities"
+            value="Bowling/Arcade"
+          />Bowling/Arcade</label
+        >
+      </div>
     <button class="button" onclick="location.href='lastpage.html'">
       Last page
     </button>
