--- a/food.html
+++ b/food.html
@@ -37,8 +37,8 @@
         >
       </div>
       <div class="food-item">
-        <img src="food/pasta.jpeg" alt="pasta" />
-        <label><input type="checkbox" name="food" value="pasta" /> pasta</label>
+        <img src="food/pasta.jpeg" alt="Italian" />
+        <label><input type="checkbox" name="food" value="Italian" /> Italian</label>
       </div>
       <div class="food-item">
         <img src="food/pizza.jpeg" alt="pizza" />
