--- a/food.html
+++ b/food.html
@@ -13,6 +13,29 @@
 
     <div class="food-selection">
       <div class="food-item">
+        <img src="food/steak.jpg" alt="steak" />
+        <label><input type="checkbox" name="food" value="steak" /> steak</label>
+      </div>
+      <div class="food-item">
+        <img src="food/koreanfood.jpeg" alt="koreanfood" />
+        <label
+          ><input type="checkbox" name="food" value="Korean food" /> korean
+          food</label
+        >
+      </div>
+       <div class="food-item">
+        <img src="food/pasta.jpg" alt="Italian" />
+        <label><input type="checkbox" name="food" value="Italian" /> Italian</label>
+      </div>
+       <div class="food-item">
+        <img src="food/sushi.jpeg" alt="sushi" />
+        <label><input type="checkbox" name="food" value="sushi" /> sushi</label>
+      </div>
+      <div class="food-item">
+        <img src="food/mexican.jpg" alt="Mexican" />
+        <label><input type="checkbox" name="food" value="Mexican" /> Mexican</label>
+      </div>
+      <div class="food-item">
         <img src="food/burgers.jpeg" alt="Burgers, fries and fried chicken" />
         <label
           ><input
@@ -30,31 +53,8 @@
         >
       </div>
       <div class="food-item">
-        <img src="food/koreanfood.jpeg" alt="koreanfood" />
-        <label
-          ><input type="checkbox" name="food" value="Korean food" /> korean
-          food</label
-        >
-      </div>
-      <div class="food-item">
-        <img src="food/pasta.jpeg" alt="Italian" />
-        <label><input type="checkbox" name="food" value="Italian" /> Italian</label>
-      </div>
-      <div class="food-item">
         <img src="food/pizza.jpeg" alt="pizza" />
         <label><input type="checkbox" name="food" value="pizza" /> pizza</label>
-      </div>
-      <div class="food-item">
-        <img src="food/salad.jpeg" alt="salad" />
-        <label><input type="checkbox" name="food" value="salad" /> salad</label>
-      </div>
-      <div class="food-item">
-        <img src="food/steak.jpeg" alt="steak" />
-        <label><input type="checkbox" name="food" value="steak" /> steak</label>
-      </div>
-      <div class="food-item">
-        <img src="food/sushi.jpeg" alt="sushi" />
-        <label><input type="checkbox" name="food" value="sushi" /> sushi</label>
       </div>
     </div>
     <button class="button" onclick="location.href='activities.html'">
