--- a/food.html
+++ b/food.html
@@ -32,7 +32,7 @@
         <label><input type="checkbox" name="food" value="sushi" /> sushi</label>
       </div>
       <div class="food-item">
-        <img src="food/mexican.jpg" alt="Mexican" />
+        <img src="food/mexican.jpeg" alt="Mexican" />
         <label><input type="checkbox" name="food" value="Mexican" /> Mexican</label>
       </div>
       <div class="food-item">
